--- a/backlog/templates/backlog/editar_tarea.html
+++ b/backlog/templates/backlog/editar_tarea.html
@@ -1,4 +1,13 @@
 {% extends "base.html" %}
+
+{% load static %}
+
+{% block extra_css %}
+<link rel="stylesheet" href="{% static 'backlog/tarea_edit.css' %}?v=1">
+
+{% endblock %}
+
+
 {% block content %}
 <div class="d-flex justify-content-between align-items-center mb-4">
   <h2>✏️ Editar Tarea</h2>
