--- a/backlog/templates/auth/login.html
+++ b/backlog/templates/auth/login.html
@@ -23,7 +23,7 @@
 
     <form method="post">
         {% csrf_token %}
-        <label for="username">Usuario:</label><br>
+        <label for="username">Usuariossss:</label><br>
         <input type="text" name="username" id="username"><br><br>
         <label for="password">Contraseña:</label><br>
         <input type="password" name="password" id="password"><br><br>
